# oms

./: Emakefile  Makefile.in  README  README.stress  TODO  configure  configure.ac  get-media.sh  oms.cfg.template  omsctl.cfg.template  omsctl.template  stress.cfg
applications/: create_new_app.sh  index.html
applications/SOTestExemple/server/src/: sotestexemple.erl
applications/app_configs/: SOTestExemple.cfg  firstapp.cfg  flowlayer.cfg  jingleserv.cfg  omschat.cfg  orc-so.cfg  orc.cfg
applications/firstapp/client/OMSclient/: .actionScriptProperties  .project
applications/firstapp/server/src/: firstapp.erl
applications/flowplayer/client/: README  flowplayer.html
applications/flowplayer/server/src/: flowplayer.erl
applications/jingleserv/client-flash10/bin-debug/: FlashyJingle.swf  ban-window.js  index.html.back  l10n.js  login-window.js  model.js  mucek.js  parameters.js  roster.js
applications/jingleserv/client-flash10/html-template/: index.template.html
applications/jingleserv/firstdemoclient/: README.txt
applications/medias/: README.txt
applications/orc-so/client/src/: ORC.mxml
doc/: Makefile  doc.html  doc.tex.in
ebin/: oms.app.in
include/: oms.hrl.in  p1_logger.hrl  rtmp.hrl
src/: amf0_codec.erl  dynamic_compile.erl  flv_codec.erl  oms.erl  oms_api.erl  oms_app_mgr.erl  oms_config.erl  oms_file_stream.erl  oms_lib.erl  oms_listener.erl  oms_sm.erl  oms_so_mgr.erl  oms_stream.erl  oms_stress.erl  oms_sup.erl  oms_tmp_sup.erl  p1_logger_h.erl  p1_loglevel.erl  rtmp_codec.erl  rtmp_session.erl  rtmp_socket.erl
src/old/: rtmp_codec.erl
(+33 files in other folders)
